# codecrafters-kafka-cpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json
.cache/clangd/index/: Socket.cpp.E26D2838F06D2B9C.idx  Socket.h.85CFA48FB647A090.idx  api_reader.h.E2F4739125956CE9.idx  api_reader_factory.h.46A59C790E4C002E.idx  api_versions_reader.cpp.5524C1F1D904074A.idx  api_versions_reader.h.1A7806C7814AD84B.idx  api_versions_request.cpp.67306536C45060C7.idx  api_versions_request.h.8308C97CA8F1EC0D.idx  client_connection.cpp.3CACC59E47B31FF5.idx  (+23 more)
include/: Socket.h  api_reader.h  api_reader_factory.h  api_versions_reader.h  api_versions_request.h  api_versions_response.h  client_connection.h  cluster_metadata.h  describe_topic_reader.h  describe_topic_request.h  describe_topic_response.h  reader.h  record.h  record_batch.h  request.h  response.h  server.h  server_constants.h  writer.h
src/: CMakeCache.txt  ClientConnection.h  KafkaResponse.h  Makefile  Socket.cpp  Socket.h  api_reader.h  api_reader_factory.h  api_settings.cpp  api_versions_reader.cpp  api_versions_reader.h  api_versions_request.cpp  api_versions_request.h  api_versions_response.cpp  api_versions_response.h  client_connection.cpp  client_connection.h  cmake_install.cmake  describe_topic_reader.cpp  describe_topic_reader.h  describe_topic_request.cpp  describe_topic_request.h  describe_topic_response.cpp  describe_topic_response.h  kafkaResponse.h  main.cpp  p3.txt  p33.txt  reader.cpp  reader.h  request.h  response.h  server.cpp  server_exceptions.h  writer.cpp  writer.h
src/network/: server.h
